--- a/responsive-single-column/EX/base.css
+++ b/responsive-single-column/EX/base.css
@@ -68,7 +68,7 @@ body {
     /*background-image: url('assets/bg.png');*/
     background-repeat:repeat;
     background-size: 50px;
-    width: 700px;
+    max-width: 700px;
     margin: 0 auto;
     padding-top: 40px;
     line-height: 1.5;
@@ -125,4 +125,32 @@ footer {
     color: #DADBCD;
     text-align: center;
     margin-bottom: 40px;
+}
+
+@media (max-width: 720px) {
+    body {
+        padding: 0;
+        font-size: 16px;
+    }
+
+    section,header,nav {
+        padding: 20px;
+    }
+
+    nav a{
+        display: block;
+        margin-bottom: 10px;
+        font-size: 17px;
+    }
+   
+    footer {
+        margin: 0;
+        font-size: 16px;
+        padding: 20px;
+    }
+
+    h2,quote {
+        font-size:24px
+    }
+
 }
