--- a/multi-column/EX/style.css
+++ b/multi-column/EX/style.css
@@ -2,10 +2,12 @@ body {
     font-size: 16px; 
     line-height: 1.5;
     color: #47353a;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
     padding: 10px 15px;
+    overflow: hidden;
 }
 
 header h1{
@@ -14,4 +16,107 @@ header h1{
 
 header nav {
     float: right;
+    margin-top: 5px;
+}
+
+header nav a {
+    color: #47353a ;
+    text-decoration: none;
+    margin-left: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.hero {
+    background-image: url('https://i.pinimg.com/originals/5d/07/3e/5d073ece041199eee953f2755392a2dd.jpg');
+    background-size: cover;
+    padding: 270px 100px;
+    background-position: right top;
+}
+
+.hero div {
+    max-width: 520px;
+    color: rgb(15, 15, 15);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero h2 {
+    font-size: 64px;
+    line-height: 1.3;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.hero p {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.products {
+    overflow: hidden;
+}
+
+.products img {
+    float: left;
+    width: 33.333%;
+}
+
+.quotes {
+    overflow: hidden;
+}
+
+.quotes div {
+    width: 50%;
+    float: left;
+    text-align: center;
+    padding: 50px 40px 40px 20px;
+}
+
+.cream-bg {
+    background-color: #f7f1ee;
+}
+
+.quotes img {
+    width: 75px;
+    border-radius: 100%;
+}
+
+.quotes blockquote {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.3;
+    max-width: 250px;
+    margin: 15px auto;
+}
+
+@media (max-width: 600px){
+   header nav a {
+       font-size: 15px;
+   }
+
+   .hero div {
+    max-width: 600px; 
+    padding: 0;
+    }
+
+   .hero h2 {
+    font-size: 40px;
+   }
+
+   .quotes div { 
+       width: auto;
+       float: none;
+       padding: 30px;
+   }
+
+   .quotes blockquote {
+       max-width: 90%; 
+   }
+   
 }
