--- a/nasa/style.css
+++ b/nasa/style.css
@@ -1,3 +1,26 @@
 body {
     background-color: #eeeeee;
+    font-family: 'Franklin Gothic Medium', 'Arial', Arial, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #203A8F;
+    padding-bottom: 3px;
+}
+
+a:hover {
+    border-bottom: 2px solid #203A8F;
+}
+
+header {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50px 10px 50px;
+    align-items: center;
+}
+
+.photos {
+
 }
