--- a/nasa/style.css
+++ b/nasa/style.css
@@ -19,8 +19,45 @@ header {
     justify-content: space-between;
     padding: 30px 50px 10px 50px;
     align-items: center;
+    margin-bottom: 60px;
 }
 
 .photos {
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:start;
+    max-width: 1000px;
+    margin: 0 auto;
 }
+
+.photo {
+    position: relative;
+    margin-bottom: 10px;
+    display: inline-block; 
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.photo img {
+   height: 300px;
+}
+
+.overlay {
+    position: absolute;
+    background: #203A8F;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    opacity: .6;
+    display: none;
+}
+
+.photo:hover .overlay{
+    display: flex;
+}
+
