--- a/vitrine-responsiva/style.css
+++ b/vitrine-responsiva/style.css
@@ -87,4 +87,36 @@ header nav {
 
 .product {
     width: 33%;
+    position: relative;
+}
+
+.product .overlay {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: hsla(54, 99%, 60%, 0.7);
+    padding: 15px;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.product:hover .overlay {
+    opacity: 1;
+}
+
+.product h4,
+.product p {
+    font-weight: 700;
+}
+
+.product p {
+    font-size: 36px;
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+
+}
+
+.product h4 {
+    font-size: 20px;
 }
